force-app/main/default/objects/MID_Secure_Payment__c/MID_Secure_Payment__c.object-meta.xml
<CustomObject>
    <label>MID_Secure_Payment</label>
    <nameField>
        <displayFormat>MID-{00000000}</displayFormat>
        <label>MID_Secure_Payment_No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MID_Secure_Payment</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>