force-app/main/default/objects/MID_Secure_Payment__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Entity__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>BCA</fullName>
                <label>Bank Central Asia</label>
            </value>
            <value>
                <fullName>Mandiri</fullName>
                <label>Bank Mandiri</label>
            </value>
            <value>
                <fullName>Danamon</fullName>
                <label>Bank Danamon</label>
            </value>
            <value>
                <fullName>BNI</fullName>
                <label>Bank Negara Indonesia</label>
            </value>
            <value>
                <fullName>BRI</fullName>
                <label>Bank Rakyat Indonesia</label>
            </value>
            <value>
                <fullName>Bank Syariah Mandiri</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>