force-app/main/default/objects/MID_Secure_Payment__c/fields/Beneficial_Owner__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beneficial Owner</label>
    <type>Checkbox</type>
</CustomField>