force-app/main/default/objects/MID_Secure_Payment__c/fields/Beneficial_Owner_KYC__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_KYC__c</fullName>
    <label>Beneficial Owner - KYC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Perorangan</fullName>
            </value>
            <value>
                <fullName>Non-Perorangan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>