force-app/main/default/objects/MID_Secure_Payment__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.ContactId</field>
            <operation>equals</operation>
            <valueField>$Source.Contact__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>MID_Secure_Payment</relationshipLabel>
    <relationshipName>MID_Secure_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>