force-app/main/default/objects/MID_Secure_Payment__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check</label>
    <referenceTo>MID_Secure_Payment__c</referenceTo>
    <relationshipLabel>MID_Secure_Payment</relationshipLabel>
    <relationshipName>MID_Secure_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>