force-app/main/default/objects/MID_Secure_Payment__c/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checklist</label>
    <type>Checkbox</type>
</CustomField>