force-app/main/default/objects/MID_Secure_Payment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MID_Secure_Payment</relationshipLabel>
    <relationshipName>MID_Secure_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>