force-app/main/default/objects/MID_Secure_Payment__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <formula>IF (TEXT(Payment_Type__c) == &apos;Visa / Master / JCB&apos;,
IF (Beneficial_Owner__c, &apos;Change Payment - Beneficial Owner Form&apos;, &apos;&apos;),
IF (TEXT(Payment_Type__c) == &apos;Private&apos;,
IF (Beneficial_Owner__c, &apos;Change Payment - SKDKK and Beneficial Owner Form&apos;, &apos;Change Payment - SKDKK Form&apos;),
IF (TEXT(Payment_Type__c) == &apos;Saving Account&apos;,
IF (Beneficial_Owner__c, &apos;Change Payment - SKDR and Beneficial Owner Form&apos;, &apos;Change Payment - SKDR Form&apos;),null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Subject</label>
    <type>Text</type>
</CustomField>