force-app/main/default/objects/MID_Secure_Payment__c/fields/Expiry_Date_MMYY__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_MMYY__c</fullName>
    <label>Expiry Date (MMYY)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>