force-app/main/default/objects/MID_Secure_Payment__c/fields/External_Id_SFDC__c.field-meta.xml
<CustomField>
    <fullName>External_Id_SFDC__c</fullName>
    <externalId>true</externalId>
    <label>External Id SFDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>