force-app/main/default/objects/MID_Secure_Payment__c/fields/Interaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Id__c</fullName>
    <label>Interaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>