force-app/main/default/objects/MID_Secure_Payment__c/fields/JsonBackEndError__c.field-meta.xml
<CustomField>
    <fullName>JsonBackEndError__c</fullName>
    <label>JsonBackEndError</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>