force-app/main/default/objects/MID_Secure_Payment__c/fields/JsonErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>JsonErrorMessage__c</fullName>
    <label>JsonErrorMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>