force-app/main/default/objects/MID_Secure_Payment__c/fields/JsonRequestBody__c.field-meta.xml
<CustomField>
    <fullName>JsonRequestBody__c</fullName>
    <label>JsonRequestBody</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>