force-app/main/default/objects/MID_Secure_Payment__c/fields/Log_a_Case__c.field-meta.xml
<CustomField>
    <fullName>Log_a_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log a Case</label>
    <type>Checkbox</type>
</CustomField>