force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_account_number2__c.field-meta.xml
<CustomField>
    <fullName>mid_account_number2__c</fullName>
    <label>mid_account_number2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>