force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_approval_code__c.field-meta.xml
<CustomField>
    <fullName>mid_approval_code__c</fullName>
    <label>mid_approval_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>