force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_channel_response_message2__c.field-meta.xml
<CustomField>
    <fullName>mid_channel_response_message2__c</fullName>
    <label>mid_channel_response_message2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>