force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_channel_response_message__c.field-meta.xml
<CustomField>
    <fullName>mid_channel_response_message__c</fullName>
    <description>Response message from payment channel</description>
    <label>mid_channel_response_message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>