force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_currency__c.field-meta.xml
<CustomField>
    <fullName>mid_currency__c</fullName>
    <description>Currency for the amount</description>
    <label>mid_currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>