force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_custom_field3_temp__c.field-meta.xml
<CustomField>
    <fullName>mid_custom_field3_temp__c</fullName>
    <label>mid_custom_field3_temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>