force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_fraud_status__c.field-meta.xml
<CustomField>
    <fullName>mid_fraud_status__c</fullName>
    <label>mid_fraud_status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>