force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_gross_amount__c.field-meta.xml
<CustomField>
    <fullName>mid_gross_amount__c</fullName>
    <description>Amount of transaction</description>
    <label>mid_gross_amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>