force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_masked_card__c.field-meta.xml
<CustomField>
    <fullName>mid_masked_card__c</fullName>
    <description>First 6 and last 4 digit of credit card</description>
    <label>mid_masked_card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>