force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_order_id2__c.field-meta.xml
<CustomField>
    <fullName>mid_order_id2__c</fullName>
    <label>mid_order_id2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>