force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_policy_apps2__c.field-meta.xml
<CustomField>
    <fullName>mid_policy_apps2__c</fullName>
    <label>mid_policy_apps2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>