force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_saved_token_id__c.field-meta.xml
<CustomField>
    <fullName>mid_saved_token_id__c</fullName>
    <description>Token value*, for credit_card payment</description>
    <label>mid_saved_token_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>