force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_saved_token_id_expired_at__c.field-meta.xml
<CustomField>
    <fullName>mid_saved_token_id_expired_at__c</fullName>
    <description>Token expiration</description>
    <label>mid_saved_token_id_expired_at</label>
    <length>255</length>
    <type>Text</type>
</CustomField>