force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_signature_key__c.field-meta.xml
<CustomField>
    <fullName>mid_signature_key__c</fullName>
    <description>Server key to authorize transaction</description>
    <label>mid_signature_key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>