force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_status_code2__c.field-meta.xml
<CustomField>
    <fullName>mid_status_code2__c</fullName>
    <label>mid_status_code2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>