force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_status_code__c.field-meta.xml
<CustomField>
    <fullName>mid_status_code__c</fullName>
    <description>Transaction status code</description>
    <label>mid_status_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>