force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_token_payment__c.field-meta.xml
<CustomField>
    <fullName>mid_token_payment__c</fullName>
    <label>mid_token_payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>