force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_transaction_id__c.field-meta.xml
<CustomField>
    <fullName>mid_transaction_id__c</fullName>
    <description>Midtrans’ transaction payment ID</description>
    <label>mid_transaction_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>