force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_transaction_status__c.field-meta.xml
<CustomField>
    <fullName>mid_transaction_status__c</fullName>
    <description>Transaction status after credit card charge</description>
    <label>mid_transaction_status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>