force-app/main/default/objects/MID_Secure_Payment__c/fields/mid_transaction_time2__c.field-meta.xml
<CustomField>
    <fullName>mid_transaction_time2__c</fullName>
    <label>mid_transaction_time2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>