force-app/main/default/objects/MID_Secure_Payment__c/fields/Midtrans_Token__c.field-meta.xml
<CustomField>
    <fullName>Midtrans_Token__c</fullName>
    <label>Midtrans Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>