force-app/main/default/objects/MID_Secure_Payment__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WalkIN</fullName>
            </value>
            <value>
                <fullName>PureCloud</fullName>
            </value>
            <value>
                <fullName>ARSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>