force-app/main/default/objects/MID_Secure_Payment__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <formula>SFDC_Order_Id__c == SFDC_Order_Id_Child__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent</label>
    <type>Checkbox</type>
</CustomField>