force-app/main/default/objects/MID_Secure_Payment__c/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bulanan</fullName>
            </value>
            <value>
                <fullName>Triwulan</fullName>
            </value>
            <value>
                <fullName>Semester</fullName>
            </value>
            <value>
                <fullName>Tahunan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>