force-app/main/default/objects/MID_Secure_Payment__c/fields/Policy_App__c.field-meta.xml
<CustomField>
    <fullName>Policy_App__c</fullName>
    <label>Policy_App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>