force-app/main/default/objects/MID_Secure_Payment__c/fields/Policy_No__c.field-meta.xml
<CustomField>
    <fullName>Policy_No__c</fullName>
    <label>Policy_No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>