force-app/main/default/objects/MID_Secure_Payment__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <formula>TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &apos; &apos; &amp;
CASE(MONTH(DATEVALUE(CreatedDate)),
1,&apos;Jan&apos;,
2,&apos;Feb&apos;,
3,&apos;Mar&apos;,
4,&apos;Apr&apos;,
5,&apos;Mei&apos;,
6,&apos;Jun&apos;,
7,&apos;Jul&apos;,
8,&apos;Agust&apos;,
9,&apos;Sept&apos;,
10,&apos;Okt&apos;,
11,&apos;Nov&apos;,
12,&apos;Des&apos;,&apos;&apos;)
&amp; &apos; &apos; &amp; TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Date</label>
    <type>Text</type>
</CustomField>