force-app/main/default/objects/MID_Secure_Payment__c/fields/Save__c.field-meta.xml
<CustomField>
    <fullName>Save__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for trigger, if need send email notification to Customer</description>
    <label>Save</label>
    <type>Checkbox</type>
</CustomField>