force-app/main/default/objects/MID_Secure_Payment__c/fields/SFDC_Order_Id_Child__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Order_Id_Child__c</fullName>
    <label>SFDC_Order_Id_Child</label>
    <length>255</length>
    <type>Text</type>
</CustomField>