force-app/main/default/objects/MID_Secure_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Origin__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>SFDC_Order_Id__c</columns>
    <columns>SFDC_Order_Id_Child__c</columns>
    <columns>Change_Name__c</columns>
    <columns>Beneficial_Owner__c</columns>
    <columns>Send_Email__c</columns>
    <columns>Card_Number__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Contact__c</columns>
    <columns>Midtrans_Token__c</columns>
    <columns>Policy_No__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>