force-app/main/default/objects/MID_Secure_Payment__c/listViews/All_AMFS.listView-meta.xml
<ListView>
    <fullName>All_AMFS</fullName>
    <columns>NAME</columns>
    <columns>Origin__c</columns>
    <columns>SFDC_Order_Id__c</columns>
    <columns>Change_Name__c</columns>
    <columns>Beneficial_Owner__c</columns>
    <columns>Send_Email__c</columns>
    <columns>Card_Number__c</columns>
    <columns>Contact__c</columns>
    <columns>Midtrans_Token__c</columns>
    <columns>Policy_No__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Policy_App__c</columns>
    <columns>mid_custom_field1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>AMFS</value>
    </filters>
    <filters>
        <field>Origin__c</field>
        <operation>notEqual</operation>
        <value>WalkIN</value>
    </filters>
    <label>All AMFS</label>
    <language>en_US</language>
</ListView>