force-app/main/default/objects/MID_Secure_Payment__c/listViews/All_AMFS_Walkin.listView-meta.xml
<ListView>
    <fullName>All_AMFS_Walkin</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Create_Date__c</columns>
    <columns>Midtrans_Token__c</columns>
    <columns>Origin__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Origin__c</field>
        <operation>equals</operation>
        <value>WalkIN</value>
    </filters>
    <label>All AMFS Walkin</label>
    <language>en_US</language>
</ListView>